# backend/controllers/auth.controller.js
@@ -108,7 +108,9 @@ export const refreshTokens = async (req, res, next) => {
     }
 
     const user = await User.findById(sessionDetail.uid);
+    console.log(user);
     const session = await Session.findById(sessionDetail.sid);
+    console.log(session);
 
     if (!user) {
       return res.status(404).send({ message: "Invalid user" });
@@ -133,9 +135,12 @@ export const refreshTokens = async (req, res, next) => {
     return res.status(200).send({
       message: "Token refreshed",
       user: {
-        id: user._id,
-        accessToken,
-        refreshToken,
+        id: user?._id,
+        username: user?.username,
+        email: user?.email,
+        accessToken: user?.accessToken,
+        refreshToken: user?.refreshToken,
+        balance: user?.balance,
       },
       session: {
         sid: newSession._id,
