# backend/docs/swagger.json
@@ -156,7 +156,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RefreshTokensResponse"
+                  "$ref": "#/components/schemas/GetUserInfo"
                 }
               }
             }
@@ -556,48 +556,6 @@
             "type": "string",
             "description": "Session's ('sid' field after authentication)",
             "example": "6523d994da34596df76f6cba"
-          }
-        }
-      },
-      "RefreshTokensResponse": {
-        "type": "object",
-        "description": "User's info tokens",
-        "properties": {
-          "user": {
-            "type": "object",
-            "properties": {
-              "id": {
-                "type": "string",
-                "description": "User's id",
-                "example": "651fe19ae031c72980a0e120"
-              },
-              "accessToken": {
-                "type": "string",
-                "description": "Access token",
-                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1aWQiOiI2NTIzMjFiZDcyYTRiYjViMTM0MDljNDgiLCJzaWQiOiI2NTIzYzZmMWJiZDNkYmI0NDViMWRhY2YiLCJpYXQiOjE2OTY4NDM1MDUsImV4cCI6MTY5Njg2NTEwNX0.k0M6kbGPP-S-QhGJanXCdZJUhiPbGVlv5etExeN4EMs"
-              },
-              "refreshToken": {
-                "type": "string",
-                "description": "Refresh token",
-                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1aWQiOiI2NTIzMjFiZDcyYTRiYjViMTM0MDljNDgiLCJzaWQiOiI2NTIzYzZmMWJiZDNkYmI0NDViMWRhY2YiLCJpYXQiOjE2OTY4NDM1MDUsImV4cCI6MTY5Njg0NzEwNX0.vi0TOSg954_awAgEM6oBFq1kcOWQMdClfmduay1IO4o"
-              }
-            }
-          },
-          "session": {
-            "type": "object",
-            "description": "Session's info",
-            "properties": {
-              "sid": {
-                "type": "string",
-                "description": "Session's id",
-                "example": "6523d994da34596df76f6cba"
-              },
-              "uid": {
-                "type": "string",
-                "description": "User's id",
-                "example": "651fe19ae031c72980a0e120"
-              }
-            }
           }
         }
       },
